Added elevation to goal given from Rviz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,8 @@ add_executable(traj_generator_new src/trajectory_generator.cpp)
 add_executable(scale src/scaling.cpp)
 add_executable(goal_transform src/goalpoint_transformer.cpp)
 add_executable(transform_pointcloud src/transform.cpp)
+add_executable(goal_shifter src/elevate_goal_point.cpp)
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -215,6 +217,11 @@ target_link_libraries(goal_transform
 target_link_libraries(transform_pointcloud
    ${catkin_LIBRARIES}
 )
+
+target_link_libraries(goal_shifter
+   ${catkin_LIBRARIES}
+)
+
 #############
 ## Install ##
 #############
